Start building simple react app

--- a/Lectures/02.Components-Basic-Idea/Demo/package.json
+++ b/Lectures/02.Components-Basic-Idea/Demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01.intro-to-react-and-jsx",
+  "name": "02.components-basic-idea",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
